--- a/_posts/2014-01-19-new-post.md
+++ b/_posts/2014-01-19-new-post.md
@@ -8,9 +8,15 @@ author: Alexey Nurgaliev
 
 Этот сайт находится в репозитории [GitHub](https://github.com/n-at/n-at.github.io)
 
-Для работы с репозиториями рекомендую пользоваться [Atlassian SoureTree](http://sourcetreeapp.com/) или ПО от [GitHub](https://github.com/). Также можно пользоваться консольной программой [git](http://git-scm.com/).
+Для работы с репозиториями рекомендую пользоваться [Atlassian SourceTree](http://sourcetreeapp.com/) или ПО от [GitHub](https://github.com/). Также можно пользоваться консольной программой [git](http://git-scm.com/).
 
 Для тестирования сайта можно использовать [Vagrant](http://www.vagrantup.com/) (Vagrantfile и скрипт настройки ВМ уже в репозитории). О том, как использовать Vagrant для разработки и тестирования сайта, написано [здесь]({% post_url 2014-01-19-vagrant %}).
+
+В Unix-совместимых ОС (например Linux и macOS) можно воспользоваться решением от GitHub. 
+Сначала нужно установить `ruby` и `gem` - в macOS они уже поставляются с системой, в Linux установка зависит от дистрибутива.
+Затем нужно выполнить в терминале `sudo gen install github-pages`.
+После этого в системе станет доступна программа `jekyll` и запустить сайт для тестирования можно будет командой `jekyll serve`
+(из каталога с кодом сайта). Сайт будет доступен по адресу [http://localhost:4000](http://localhost:4000). 
 
 ### Добавление статей
 
@@ -26,7 +32,7 @@ author: Alexey Nurgaliev
 
 Для обработки файлов, содержащих текст, написанный на языке Textile, используется процессор RedCloth. Описание синтаксиса Textile есть на [официальном сайте](http://redcloth.org/textile/) RedCloth.
 
-Файлы с разметкой HTML дополнительно не обрабатываютcя.
+Файлы с разметкой HTML дополнительно не обрабатываются.
 
 В начале файла должен находиться текст с описанием статьи:
 
