--- a/_posts/mathematiques/2014-07-23-XXVIII-3.md
+++ b/_posts/mathematiques/2014-07-23-XXVIII-3.md
@@ -2,7 +2,7 @@
 layout: post
 title: 2013-2014 год. 3-й тур (очный)
 author: Valentin Gubarev
-section: mathematiques-tasks-other
+section: mathematiques
 ---
 
 <script src="/js/mathematiques.js"></script>
