мелкое обновление шаблона

--- a/_posts/mathematiques/2014-04-13-XXVIII-2.md
+++ b/_posts/mathematiques/2014-04-13-XXVIII-2.md
@@ -2,7 +2,7 @@
 layout: post
 title: 2013-2014 год. 2-й тур
 author: Valentin Gubarev
-section: mathematiques
+section: mathematiques-tasks
 ---
 
 <script src="/js/mathematiques.js"></script>
