--- a/_posts/mathematiques/2014-08-28-XXVIII-4.md
+++ b/_posts/mathematiques/2014-08-28-XXVIII-4.md
@@ -2,7 +2,7 @@
 layout: post
 title: 2013-2014 год. 4-й тур (очный), Франция (28 августа 2014)
 author: Valentin Gubarev
-section: mathematiques
+section: mathematiques-tasks
 ---
 
 <script src="/js/mathematiques.js"></script>
