--- a/_posts/mathematiques/2014-02-05-XXVIII-1.md
+++ b/_posts/mathematiques/2014-02-05-XXVIII-1.md
@@ -2,7 +2,7 @@
 layout: post
 title: 2013-2014 год. 1-й тур
 author: Valentin Gubarev
-section: mathematiques
+section: mathematiques-tasks
 ---
 
 <script src="/js/mathematiques.js"></script>
