--- a/_posts/mathematiques/2015-04-06-XXIX-2.md
+++ b/_posts/mathematiques/2015-04-06-XXIX-2.md
@@ -2,7 +2,7 @@
 layout: post
 title: 2014-2015 год. 2-й тур (заочный)
 author: Valentin Gubarev
-section: mathematiques
+section: mathematiques-tasks
 ---
 
 <script src="/js/mathematiques.js"></script>
