правка страниц под новые шаблоны

--- a/_posts/2014-01-19-new-post.md
+++ b/_posts/2014-01-19-new-post.md
@@ -10,17 +10,16 @@ author: Alexey Nurgaliev
 
 Для работы с репозиториями рекомендую пользоваться [Atlassian SourceTree](http://sourcetreeapp.com/) или ПО от [GitHub](https://github.com/). Также можно пользоваться консольной программой [git](http://git-scm.com/).
 
-Для тестирования сайта можно использовать [Vagrant](http://www.vagrantup.com/) (Vagrantfile и скрипт настройки ВМ уже в репозитории). О том, как использовать Vagrant для разработки и тестирования сайта, написано [здесь]({% post_url 2014-01-19-vagrant %}).
-
 В Unix-совместимых ОС (например Linux и macOS) можно воспользоваться решением от GitHub. 
 Сначала нужно установить `ruby` и `gem` - в macOS они уже поставляются с системой, в Linux установка зависит от дистрибутива.
-Затем нужно выполнить в терминале `sudo gen install github-pages`.
+Затем нужно выполнить в терминале `sudo gem install github-pages`.
 После этого в системе станет доступна программа `jekyll` и запустить сайт для тестирования можно будет командой `jekyll serve`
 (из каталога с кодом сайта). Сайт будет доступен по адресу [http://localhost:4000](http://localhost:4000). 
 
 ### Добавление статей
 
-Новые статьи добавляются в папку `_posts` Имя файла статьи должно соответствовать шаблону: `ГГГГ-ММ-ДД-название-статьи` Расширение файла зависит от того, какой язык разметки используется:
+Новые статьи добавляются в папку `_posts` Имя файла статьи должно соответствовать шаблону: `ГГГГ-ММ-ДД-название-статьи`. 
+Расширение файла зависит от того, какой язык разметки используется:
 
 * `.html` - HTML
 * `.textile` - [Textile](http://ru.wikipedia.org/wiki/Textile_%28%D1%8F%D0%B7%D1%8B%D0%BA_%D1%80%D0%B0%D0%B7%D0%BC%D0%B5%D1%82%D0%BA%D0%B8%29)
@@ -28,9 +27,11 @@ author: Alexey Nurgaliev
 
 Все файлы проходят предварительную обработку процессором шаблонов [Liquid](http://docs.shopify.com/themes/liquid-basics). 
 
-Для обработки markdown используется процессор kramdown. Описание расширенного им синтаксиса markdown можно прочитать на [официальном сайте](http://kramdown.gettalong.org/syntax.html).
+Для обработки markdown используется процессор kramdown. 
+Описание расширенного им синтаксиса markdown можно прочитать на [официальном сайте](http://kramdown.gettalong.org/syntax.html).
 
-Для обработки файлов, содержащих текст, написанный на языке Textile, используется процессор RedCloth. Описание синтаксиса Textile есть на [официальном сайте](http://redcloth.org/textile/) RedCloth.
+Для обработки файлов, содержащих текст, написанный на языке Textile, используется процессор RedCloth. 
+Описание синтаксиса Textile есть на [официальном сайте](http://redcloth.org/textile/) RedCloth.
 
 Файлы с разметкой HTML дополнительно не обрабатываются.
 
@@ -51,8 +52,10 @@ author: Alexey Nurgaliev
 Также дополнительно можно указать поле `section:` чтобы поместить статью в специальный раздел сайта. 
 
 * `section: pskov` - Олимпиадное программирование в Псков ГУ
-* `section: programming` - Изучение языков программирования
+* `section: programming` - Изучение языков программирования, дополнительно можно указать `language: название языка программирования`
 * `section: experimental` - Эксперименты
+* `section: mathematiques` - Международный Чемпионат Математических и Логических Игр
+* `section: mc` - Микроконтроллеры
 
 Далее может располагаться любой текст.
 
@@ -117,6 +120,8 @@ class PollViewTest(TestCase):
 * `css` - стили CSS
 * `js` - файлы JavaScript
 * `img` - каталог для изображений (место размещения изображений не принципиально, но рекомендуется помещать их сюда, в отдельный каталог для статьи)
+* `docs` - прочие файлы
+* `vendor` - сторонние библиотеки
 
 ### Редактирование каталога ссылок
 
