--- a/_posts/mathematiques/2014-02-05-XXVIII-1.md
+++ b/_posts/mathematiques/2014-02-05-XXVIII-1.md
@@ -5,18 +5,15 @@ author: Valentin Gubarev
 section: mathematiques-tasks
 ---
 
+<script src="/vendor/jquery-2.2.4/jquery.min.js"></script>
 <script src="/js/mathematiques.js"></script>
 
 [Задания 1-го тура](../../../docs/mathematiques/2014_zadania_1tur.pdf)  
 [Бланк ответов 1-го тура](../../../docs/mathematiques/2014_blank_1tur.pdf)
 
----
+## Условия задач
 
-### Условия задач
-
----
-
-#### Содержание:
+### Содержание:
 
 1. [10 монет](#1)
 2. [Даты года](#2)
@@ -41,7 +38,7 @@ section: mathematiques-tasks
 
 <a name="1"></a>
 
-#### 1. 10 монет
+### 1. 10 монет
 
 У дядюшки Боба в кошельке 10 монет: 5 монет по 1 евро и 5 монет по 0,50 евро. Он разделил монеты между Матильдой, Матиасом и Матье так, чтобы каждый получил одинаковую сумму денег. Матильда и Матиас получили одинаковое количество монет. Сколько монет по 1 евро и сколько монет по 0,50 евро получил Матье?
 
@@ -52,7 +49,7 @@ section: mathematiques-tasks
 
 <a name="2"></a>
 
-#### 2. Даты года
+### 2. Даты года
 
 День месяца (от 01 по 31) и номер месяца (от 01 по 12) записываются с использованием двух цифр. Сколько дат с 01 января (01.01) по 31 декабря (31.12) можно составить, используя цифры 2, 0, 1, 4?
 
@@ -85,7 +82,7 @@ section: mathematiques-tasks
 
 <a name="3"></a>
 
-#### 3. Утверждение
+### 3. Утверждение
 
 Вставьте два числа так, чтобы утверждение в рамке было математически верным.
 
@@ -119,7 +116,7 @@ section: mathematiques-tasks
 
 <a name="4"></a>
 
-#### 4. Пирамида
+### 4. Пирамида
 
 В пирамиду из пронумерованных банок бросают мяч. Банка, задетая мячом, падает, увлекая за собой банки, расположенные над ней. Игроку записывается сумма чисел на сбитых банках. Матиас набрал 40 очков. Какую банку сбил его мяч?
 
@@ -135,7 +132,7 @@ section: mathematiques-tasks
 
 <a name="5"></a>
 
-#### 5. Браслеты
+### 5. Браслеты
 
 У Матильды 4 одинаковых браслета. Когда она положила 3 браслета на стол, то они образовали 7 замкнутых областей. Какое максимальное количество областей она может получить, если добавит четвертый браслет?
 
@@ -149,7 +146,7 @@ section: mathematiques-tasks
 
 <a name="6"></a>
 
-#### 6. Песни
+### 6. Песни
 
 На школьном празднике Адель, Барбара, Селин и Далила исполнили несколько песен. Каждая песня была исполнена тремя из четырех девушек. Адель исполнила только 4 песни. Далила исполнила наибольшее количество песен – 8. Сколько песен было исполнено на этом празднике?
 
@@ -195,7 +192,7 @@ section: mathematiques-tasks
 
 <a name="7"></a>
 
-#### 7. Магический волчок
+### 7. Магический волчок
 
 Одиннадцать кругов волчка содержат все числа от 1 до 11. Сумма чисел, расположенных на каждой линии из трех или пяти кругов, всегда равна 22. Числа от 4 до 10 стерты. Впишите эти числа в пустые круги.
 
@@ -231,7 +228,7 @@ section: mathematiques-tasks
 
 <a name="8"></a>
 
-#### 8. Число Матиаса
+### 8. Число Матиаса
 
 Матиас написал число из трех цифр, причем последняя цифра – 5. Если перемножить цифру сотен и цифру десятков, то полученный результат будет в 25 раз меньше числа, записанного Матиасом. К несчастью, две первые цифры числа скрыты под чернильными кляксами. Какое число написал Матиас?
 
@@ -257,7 +254,7 @@ A×B×25 = A×100+B×10+5
 
 <a name="9"></a>
 
-#### 9. Бамбуковый треугольник
+### 9. Бамбуковый треугольник
 
 У Матильды 5 бамбуковых палочек длиной 2 см, 3 см, 4 см, 5 см и 6 см. Из трех палочек можно составить треугольник, который показан на рисунке. Сколько РАЗНЫХ треугольников может составить Матильда, считая образец?
 
@@ -277,7 +274,7 @@ A×B×25 = A×100+B×10+5
 
 <a name="10"></a>
 
-#### 10. Последовательность Матиаса
+### 10. Последовательность Матиаса
 
 Первое число Матиаса – это 7. Он возводит его в квадрат (7×7=49), затем прибавляет 1 к сумме цифр (4+9+1=14). 14 становится вторым числом в последовательности Матиаса. И так далее Матиас прибавляет 1 к сумме цифр квадрата предыдущего числа. Каким будет тысячное число в последовательности Матиаса?
 
@@ -299,13 +296,13 @@ A×B×25 = A×100+B×10+5
 
 <a name="11"></a>
 
-#### 11. Друзья
+### 11. Друзья
 
 В группе друзей, собравшихся на праздник, более 40% парней и более 50% девушек. Каково минимальное количество собравшихся?
 
 <a name="12"></a>
 
-#### 12. Прозрачные фигуры
+### 12. Прозрачные фигуры
 
 Цифры от 1 до 9 имеют определенный стиль записи и распечатаны на пяти прозрачных формах, каждая из которых может быть повернута в любую сторону и наложена на другие. Уложите эти пять форм в коробку 3×3 таким образом, чтобы их стороны образовали горизонтальную или вертикальную линии. Каждая из девяти цифр должна быть единственной в коробке и должна быть читабельна.
 
@@ -313,7 +310,7 @@ A×B×25 = A×100+B×10+5
 
 <a name="13"></a>
 
-#### 13. Роза ветров
+### 13. Роза ветров
 
 Эта роза ветров построена в квадрате со стороной 18 см. Какова площадь серой фигуры? Дайте ответ в $$ см^2 $$, округлив его до целого количества $$ см^2 $$ (по правилам математики).
 
@@ -321,19 +318,19 @@ A×B×25 = A×100+B×10+5
 
 <a name="14"></a>
 
-#### 14. Два прямоугольника
+### 14. Два прямоугольника
 
 На листе формата А5 (это лист размером 14,8 см на 21 см), Матильда начертила 2 прямоугольника, стороны которых измеряются целыми значениями см. Эти два прямоугольника имеют одинаковый периметр, но площадь второго в два раза больше площади первого. Каков периметр этих прямоугольников?
 
 <a name="15"></a>
 
-#### 15. Числа года
+### 15. Числа года
 
 Если прибавить к числу 2014 произведение его четырех цифр: 2014+2∙0∙1∙4, то получится 2014. Найдите другое число, сумма которого с произведением его цифр будет равна 2014.
 
 <a name="16"></a>
 
-#### 16. Участок
+### 16. Участок
 
 На бесконечном во все стороны плане находятся квадратные секторы со стороной 1 м. Мы хотим отгородить участок с помощью 20-ти барьеров длиной по 5 м. Края каждого барьера должны находиться в двух точках плана. 
 Какова максимально возможная площадь огороженного участка? Дайте ответ в $$ м^2 $$, округлив его до целого значения (по правилам математики).
@@ -342,7 +339,7 @@ A×B×25 = A×100+B×10+5
 
 <a name="17"></a>
 
-#### 17. Дорожный указатель
+### 17. Дорожный указатель
 
 Дорожный указатель в Математической Стране, сообщающий об опасности камнепада, имеет форму треугольника. Внутри находятся три квадрата серого цвета, причем они имеют внутри треугольника общую вершину и две вершины каждого квадрата лежат на сторонах треугольника (см. рис.). Сторона каждого из трех квадратов равна 2,8 дм. Угол треугольника, лежащий напротив стороны в 10,8 дм, равен $$ 75^о $$. Какова площадь треугольника? Ответ выразите в $$ см^2 $$ и округлите до целого числа. При необходимости используйте $$ \sqrt{2}=1,414 $$, $$ \sqrt{3}=1,732 $$.
 
@@ -350,6 +347,6 @@ A×B×25 = A×100+B×10+5
 
 <a name="18"></a>
 
-#### 18. Монеты в Математической Стране
+### 18. Монеты в Математической Стране
 
 Деньги в Математической Стране называются «мато». Существует три вида монет: монета номиналом в 1 мато и две других монеты номиналом в целое количество мато, больше 1. Номинал этих монет определяется таким образом, чтобы среднее арифметическое количества монет для платежей – 0 мато, 1 мато, 2 мато, 3 мато и т.д. до 99 мато, являлось бы наименьшим. Найдите это среднее количество монет. Ответ округлите до сотых.
