--- a/_posts/mathematiques/2014-04-13-XXVIII-2.md
+++ b/_posts/mathematiques/2014-04-13-XXVIII-2.md
@@ -5,18 +5,15 @@ author: Valentin Gubarev
 section: mathematiques-tasks
 ---
 
+<script src="/vendor/jquery-2.2.4/jquery.min.js"></script>
 <script src="/js/mathematiques.js"></script>
 
 [Задания 2-го тура](../../../docs/mathematiques/2014_zadania_2tur.pdf)  
 [Бланк ответов 2-го тура](../../../docs/mathematiques/2014_blank_2tur.pdf)
 
----
+## Условия задач
 
-### Условия задач
-
----
-
-#### Содержание:
+### Содержание:
 
 1. [Получи сто](#1)
 2. [Из 3 квадратов](#2)
@@ -41,7 +38,7 @@ section: mathematiques-tasks
 
 <a name="1"></a>
 
-#### 1. Получи сто
+### 1. Получи сто
 
 1 2 3 4 5 6 7
 
@@ -56,7 +53,7 @@ section: mathematiques-tasks
 
 <a name="2"></a>
 
-#### 2. Из 3 квадратов
+### 2. Из 3 квадратов
 
 Приближая два квадрата горизонтально, не поворачивая их, можно получить рисунок, на котором появятся три полностью нарисованных квадрата.<br>
 Какое наибольшее количество квадратов можно получить, сближая таким образом три квадрата?
@@ -67,7 +64,7 @@ section: mathematiques-tasks
 
 <a name="3"></a>
 
-#### 3. Участки с деревьями
+### 3. Участки с деревьями
 
 Фигура содержит 4 плодовых дерева. Разделите эту фигуру по пунктирным линиям сетки на 4 одинаковых по форме части, в каждой из которых будет находится только одно дерево.
 
@@ -77,7 +74,7 @@ section: mathematiques-tasks
 
 <a name="4"></a>
 
-#### 4. Спички
+### 4. Спички
 
 Даны 20 спичек (см. рисунок).<br>
 Удалите (зачеркните) только 3 спички так, чтобы можно было увидеть цифры 2, 0, 1 и 4. Каждая спичка должна принадлежать только одной цифре. Цифры выглядят так:
@@ -89,7 +86,7 @@ section: mathematiques-tasks
 
 <a name="5"></a>
 
-#### 5. Крест
+### 5. Крест
 
 На рисунке число с внешней стороны показывает сумму всех чисел в данном столбце или строке. Впишите в пустые клетки все числа от 2 до 9.
 
@@ -99,7 +96,7 @@ section: mathematiques-tasks
 
 <a name="6"></a>
 
-#### 6. Ели
+### 6. Ели
 
 Площадь маленькой ели слева 8 см2. Площадь ели в середине 15 см2. все треугольники равны между собой. Какова площадь большой ели справа? Ответ запишите в см2.
 
@@ -109,7 +106,7 @@ section: mathematiques-tasks
 
 <a name="7"></a>
 
-#### 7. Зорро
+### 7. Зорро
 
 Зорро кончиком своей шпаги высек свою знаменитую букву Z на плаще, на котором был изображён рисунок (см. картинку). каждый из 13 квадратов изображения на плаще рассечён только одной линией. Нарисуйте букву Z, не проводя линий через вершины квадратов.
 
@@ -119,7 +116,7 @@ section: mathematiques-tasks
 
 <a name="8"></a>
 
-#### 8. Нумерация страниц
+### 8. Нумерация страниц
 
 Страницы книги прнумерованы 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13 ... Цифра, которая встретилась в номере последней страницы, появлялась 20 раз в номерах страниц всей книги. Если бы в книге было бы на 13 страниц меньше, тогда та же цифра была бы использована только 14 раз во всей книге. Сколько страниц в книге?
 
@@ -129,7 +126,7 @@ section: mathematiques-tasks
 
 <a name="9"></a>
 
-#### 9. Число
+### 9. Число
 
 Загадано число, обладающее свойствами:<br>
 - больше 0 и меньше 2014;<br>
@@ -145,7 +142,7 @@ section: mathematiques-tasks
 
 <a name="10"></a>
 
-#### 10. Участок Пьера Сифлера
+### 10. Участок Пьера Сифлера
 
 Пьер Сифлер имеет участок земли в виде прямоугольной трапеции. Эта трапеция состоит из прямоугольника и равнобедренного прямоугольного треугольника с общей стороной. У прямоугольника, стороны которого измеряются целыми числами декаметров, площадь равная 1200 м2. Определите общую площадь участка Пьера Сифлера. Ответ запишите в м2. 
 
@@ -155,7 +152,7 @@ section: mathematiques-tasks
 
 <a name="11"></a>
 
-#### 11. Обмен
+### 11. Обмен
 
 На этой шахматной минидоске возможны движения:<br>
 - перемещение пешки в соседнюю (по стороне) клетку при условии, что клетка свободна;<br>
@@ -164,46 +161,46 @@ section: mathematiques-tasks
 
 <a name="12"></a>
 
-#### 12. Из пяти квадратов один
+### 12. Из пяти квадратов один
 
 Разделите фигуру на минимальное количество частей так, чтобы из всех них можно было собрать один большой квадрат.
 
 <a name="13"></a>
 
-#### 13. Девять жетонов
+### 13. Девять жетонов
 
 Имеется девять жетонов. Они все расположены в квадрате 3х3 (см. картинку). За один обмен можно поменять местами положение двух любых жетонов из квадрата. Какое минимальное количество обменов необходимо произвести, чтобы получить квадрат, в котором суммы чисел в каждой строке и в каждом столбце, а также на двух диагоналях были равны 6?
 
 <a name="14"></a>
 
-#### 14. Последовательность
+### 14. Последовательность
 
 Дана последовательность a1 = 20, a2 = 14. Затем, для каждого следующего элемента последовательности действует соотношение a_n+2 = (1+a_n+1) / a_n.<br>
 Таким образом; a_3 = 3/4, и т.д. Найдите a_2014. Если ответ не является целым, тогда запишите его в виде несократимой дроби.
 
 <a name="15"></a>
 
-#### 15. Деление на 11
+### 15. Деление на 11
 
 Матильда разделила трёхзначное на 11. Она удивилась, т.к. частное оказалось целым числом, равным сумме квадратов цифр в исходном числе. Определите первоночальное число.
 
 <a name="16"></a>
 
-#### 16. Современное искусство
+### 16. Современное искусство
 
 Картина художника Река Тангеля представляет собой большой прямоугольник. Длина и ширина маленького белого прямоугольника в центре соответственно равны 20 и 14 
 дециметров. Длина и ширина каждого маленького серого прямоугольника измеряют целыми числам дециметров. Площади четырех серых маленьких прямоугольников одинаковы. Определите минимально возможную площадь маленького серого прямоугольника. Ответ выразите в дм2.
 
 <a name="17"></a>
 
-#### 17. Бипирамида
+### 17. Бипирамида
 
 На рисунке изображен драгоценный камень в виде бипирамиды. Она имеет 2 вершины, в которых сходятся по 5 ребер, и 5 вершин, в которых сходятся по 4 ребра. Все 15 ребер одинаковы и имеют длину 19 мм. Разделим бипирамиду на 5 одинаковых четырехгранника (см. рисунок), в которых пять из шести ребер 
 являются ребрами бипирамиды. Определите длину шестого ребра четырехгранника. Если необходимо, примите cos(pi/10) = 0,95.
 
 <a name="18"></a>
 
-#### 18. Счастливый год
+### 18. Счастливый год
 
 N_1 = 13^0, N_2 = 13^1, N_3 = 13^2, N_4 = 2014. Затем, каждый следующий член последовательности равен сумме четырёх предыдущих членов. Так, N_5 = 13^0 + 13^1 + 13^2 + 2014 = 13^3. Какое количество цифр будет содержать N_2014? Если необходимо, примите lg(1,928)=0,285, lg(8.748)=0.942.
 
