--- a/_posts/programming/2014-05-18-double.md
+++ b/_posts/programming/2014-05-18-double.md
@@ -52,7 +52,7 @@ language: 'C/C++'
 
 Ниже представлена программа на C/C++ выводящая побитого 8 байт числа double.
 
-{% highlight cpp %}
+{% highlight cpp linenos %}
 #include<stdio.h>
 void print(char *x){
     for (int i = 7; i >=0; --i)
